ld/testsuite/ld-arm/arm-pic-veneer.d
@@ -12,6 +12,6 @@ Disassembly of section .text:
 
 00008008 <__foo_from_arm>:
     8008:	e59fc004 	ldr	ip, \[pc, #4\]	; 8014 <__foo_from_arm\+0xc>
-    800c:	e08cc00f 	add	ip, ip, pc
+    800c:	e08fc00c 	add	ip, pc, ip
     8010:	e12fff1c 	bx	ip
     8014:	fffffff1 	.word	0xfffffff1
